[package]
name = "dyncvoke_core"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  

[dependencies]
data = { path = "../data" }
libc = "0.2.101"
litcrypt2 = "=0.1.2"
nanorand = {version = "0.7.0", optional = true}

[target.'cfg(target_arch = "x86_64")'.dependencies]
nanorand = {version = "0.7.0"}

[features]
syscall = []

[build-dependencies]
cc = "1.0.83"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"
]