[package]
name = "manualmap"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  

[dependencies]
dyncvoke_core = { path = "../dyncvoke_core" }
data = { path = "../data" }
litcrypt2 = "=0.1.2"
os_info = { version = "3.0", default-features = false }

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading"
]